# pantherdb-orthologs-ingest

./: .copier-answers.yml  .cruft.json  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  download.yaml  justfile  mkdocs.yaml  pyproject.toml
.github/workflows/: create-release.yaml  release.yaml  test.yaml
docs/: 404.html  edges_report.tsv  index.html  index.md  objects.inv  sitemap.xml
docs/search/: search_index.json
scripts/: generate-rdf.py  generate-report.py  get-latest-report.py  preprocess_ncbi_gene_map.py  preprocess_ncbi_gene_map.sql  write_metadata.py
src/: ncbi_gene_map.yaml  panther_genome_orthologs.py  panther_genome_orthologs.yaml  panther_orthologs_utils.py  transform.py  transform.yaml  versions.py
src/pantherdb_orthologs_ingest/: __init__.py  cli.py  metadata.yaml  panther_orthologs_utils.py  transform.py  transform.yaml
tests/: test_panther_orthologs.py  test_preprocess_ncbi_gene_map.py
