[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "pantherdb_orthologs_ingest"
description = "Ortholog ingest from PantherDB - transforms gene orthology relationships into Biolink model format"
authors = [
  {name = "Monarch Initiative", email = "info@monarchinitiative.org"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

dependencies = [
  "koza>=2.0.0",
  "biolink-model>=4.0.0",
  "duckdb>=0.10.2",
  "kghub-downloader>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Test file contains TSV data strings that must remain on single lines
"tests/test_preprocess_ncbi_gene_map.py" = ["E501"]
